+URL and Email token types and their recognition in PostTokenizer