@@ -16,10 +16,10 @@
 package com.textocat.textokit.tokenizer.simple;
 
 import com.google.common.collect.*;
+import com.textocat.textokit.commons.cas.AnnotationUtils;
 import com.textocat.textokit.tokenizer.fstype.*;
 import org.apache.uima.analysis_engine.AnalysisEngineDescription;
 import org.apache.uima.analysis_engine.AnalysisEngineProcessException;
-import org.apache.uima.cas.CAS;
 import org.apache.uima.cas.Type;
 import org.apache.uima.cas.text.AnnotationFS;
 import org.apache.uima.cas.text.AnnotationIndex;
@@ -30,6 +30,7 @@ import org.apache.uima.jcas.tcas.Annotation;
 import org.apache.uima.resource.ResourceInitializationException;
 
 import java.util.*;
+import java.util.regex.Pattern;
 
 /**
  * @author Rinat Gareev
@@ -51,7 +52,6 @@ public class PostTokenizer extends JCasAnnotator_ImplBase {
      */
     @Override
     public void process(JCas jCas) throws AnalysisEngineProcessException {
-        CAS cas = jCas.getCas();
         mergedMap = Maps.newHashMap();
         wordType = jCas.getCasType(W.type);
         numType = jCas.getCasType(NUM.type);
@@ -61,7 +61,7 @@ public class PostTokenizer extends JCasAnnotator_ImplBase {
             List<Token> curTokenSeq = Lists.newLinkedList();
             for (Annotation tokenBase : tokenBases) {
                 if (tokenBase instanceof WhiteSpace) {
-                    handle(cas, ImmutableList.copyOf(curTokenSeq));
+                    handle(jCas, ImmutableList.copyOf(curTokenSeq));
                     curTokenSeq.clear();
                 } else {
                     // it's Token
@@ -69,12 +69,11 @@ public class PostTokenizer extends JCasAnnotator_ImplBase {
                 }
             }
             // handle last seq
-            handle(cas, ImmutableList.copyOf(curTokenSeq));
+            handle(jCas, ImmutableList.copyOf(curTokenSeq));
             curTokenSeq.clear();
             // index/unindex
             Set<String> mergedTokenStrings = Sets.newHashSet();
-            for (Map.Entry<AnnotationFS, Collection<? extends AnnotationFS>> entry : mergedMap
-                    .entrySet()) {
+            for (Map.Entry<AnnotationFS, Collection<? extends AnnotationFS>> entry : mergedMap.entrySet()) {
                 jCas.addFsToIndexes(entry.getKey());
                 mergedTokenStrings.add(entry.getKey().getCoveredText());
                 for (AnnotationFS anno : entry.getValue()) {
@@ -83,22 +82,22 @@ public class PostTokenizer extends JCasAnnotator_ImplBase {
             }
             getLogger().debug("Merged tokens: " + mergedTokenStrings);
         } finally {
-            mergedMap.clear();
+            mergedMap = null;
         }
     }
 
-    private boolean handle(CAS cas, List<Token> tokens) {
+    private boolean handle(JCas jCas, List<Token> tokens) {
         if (tokens.size() <= 1) {
             return false;
         } else if (tokens.size() == 2) {
             // check abbreviation dictionary
             if (isWord(tokens.get(0)) && isDot(tokens.get(1))
                     && isAbbreviation(getCoveredText(tokens))) {
-                makeAnnotation(cas, tokens.get(0).getType(), tokens);
+                makeAnnotation(jCas, tokens.get(0).getType(), tokens);
                 return true;
             }
             if (!hasPMOrSpecial(tokens)) {
-                makeAnnotation(cas,
+                makeAnnotation(jCas,
                         isWord(tokens.get(0)) ? tokens.get(0).getType() : wordType,
                         tokens);
             }
@@ -107,25 +106,33 @@ public class PostTokenizer extends JCasAnnotator_ImplBase {
             Token t1 = tokens.get(1);
             Token t2 = tokens.get(2);
             if (isPossibleInnerPM(t1) && hasWord(t0, t2)) {
-                makeAnnotation(cas, isWord(t0) ? t0.getType() : wordType, tokens);
+                makeAnnotation(jCas, isWord(t0) ? t0.getType() : wordType, tokens);
                 return true;
             }
             // TODO may be RANGE is better as target type, e.g. "12-14"
             if (isNumInternalPM(t1) && isNum(t0) && isNum(t2)) {
-                makeAnnotation(cas, numType, tokens);
+                makeAnnotation(jCas, numType, tokens);
             }
         } else {
             // tokens size >= 4
-            LinkedList<Token> cleaned = Lists.newLinkedList(tokens);
-            while (!cleaned.isEmpty() && isPMOrSpecial(cleaned.getFirst())) {
-                cleaned.removeFirst();
-            }
-            while (!cleaned.isEmpty() && isPMOrSpecial(cleaned.getLast())) {
-                cleaned.removeLast();
-            }
-            // to avoid infinite recursion
-            if (tokens.size() != cleaned.size()) {
-                return handle(cas, cleaned);
+            if (startsLikeUrl(tokens)) {
+                makeAnnotation(jCas, URL.class, tokens);
+            } else if (isEmail(jCas.getDocumentText().substring(
+                    tokens.get(0).getBegin(), tokens.get(tokens.size() - 1).getEnd()))) {
+                makeAnnotation(jCas, Email.class, tokens);
+            } else {
+                // re-run on 'cleaned' internals
+                LinkedList<Token> cleaned = Lists.newLinkedList(tokens);
+                while (!cleaned.isEmpty() && isPMOrSpecial(cleaned.getFirst())) {
+                    cleaned.removeFirst();
+                }
+                while (!cleaned.isEmpty() && isPMOrSpecial(cleaned.getLast())) {
+                    cleaned.removeLast();
+                }
+                // to avoid infinite recursion
+                if (tokens.size() != cleaned.size()) {
+                    return handle(jCas, cleaned);
+                }
             }
         }
         return false;
@@ -175,6 +182,14 @@ public class PostTokenizer extends JCasAnnotator_ImplBase {
         return ".".equals(tkn.getCoveredText());
     }
 
+    private boolean isColon(Token t) {
+        return ":".equals(t.getCoveredText());
+    }
+
+    private boolean isSlash(Token t) {
+        return "/".equals(t.getCoveredText());
+    }
+
     private static final Set<String> NUM_INTERNAL_PM = ImmutableSet.of(",", ".", "-");
 
     private boolean isNumInternalPM(Token tkn) {
@@ -189,6 +204,24 @@ public class PostTokenizer extends JCasAnnotator_ImplBase {
         return tkn instanceof NUM;
     }
 
+    private boolean startsLikeUrl(List<Token> tokens) {
+        return tokens.size() >= 4 &&
+                (isColon(tokens.get(1)) && isSlash(tokens.get(2)) && isSlash(tokens.get(3))
+                        && isUrlScheme(tokens.get(0)));
+    }
+
+    private final Set<String> URL_SCHEMES = ImmutableSet.of("https", "http", "ftp", "mailto", "file");
+
+    private boolean isUrlScheme(Token t) {
+        return URL_SCHEMES.contains(t.getCoveredText());
+    }
+
+    private final Pattern SIMPLE_EMAIL_PATTERN = Pattern.compile("[^@]+@[-\\p{IsLetter}0-9.]+");
+
+    private boolean isEmail(String s) {
+        return SIMPLE_EMAIL_PATTERN.matcher(s).matches();
+    }
+
     private String getCoveredText(Iterable<? extends AnnotationFS> iter) {
         StringBuilder sb = new StringBuilder();
         for (AnnotationFS anno : iter) {
@@ -197,9 +230,16 @@ public class PostTokenizer extends JCasAnnotator_ImplBase {
         return sb.toString();
     }
 
-    private void makeAnnotation(CAS cas, Type targetType, List<? extends AnnotationFS> rangeAnnos) {
+    private void makeAnnotation(JCas jCas, Type targetType, List<? extends AnnotationFS> rangeAnnos) {
         int begin = rangeAnnos.get(0).getBegin();
         int end = rangeAnnos.get(rangeAnnos.size() - 1).getEnd();
-        mergedMap.put(cas.createAnnotation(targetType, begin, end), rangeAnnos);
+        mergedMap.put(jCas.getCas().createAnnotation(targetType, begin, end), rangeAnnos);
+    }
+
+    private void makeAnnotation(JCas jCas, Class<? extends Annotation> targetType, List<? extends AnnotationFS> rangeAnnos) {
+        int begin = rangeAnnos.get(0).getBegin();
+        int end = rangeAnnos.get(rangeAnnos.size() - 1).getEnd();
+        Annotation resultAnno = AnnotationUtils.create(jCas, begin, end, targetType);
+        mergedMap.put(resultAnno, rangeAnnos);
     }
 }
